# shoppyshops.shop

./: .cursorrules  README.md  SPECIFICATIONS.md  manage.py  ngrok.yml  pyproject.toml
ebay/: ebay.py
meta/: meta.py
shopify/: shopify.py
shoppyshop/: apps.py  shoppyshop.py  urls.py  views.py
shoppyshop/management/commands/: simulate_webhook.py
shoppyshops/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
templates/partials/: notification.html  orders_list.html  service_status.html
tests/: conftest.py  test_shopify.py  test_webhooks.py
tests/mocks/shopify/: order.json  products.json
tests/mocks/shopify/webhooks/: order_created.json
