[tool.poetry]
name = "shoppyshops-shop"
version = "0.1.0"
description = ""
authors = ["Daryl Antony <daryl@shoppyshops.shop>"]
readme = "README.md"
packages = [{include = "shoppyshops"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-htmx = "^1.21.0"
pytest = "^8.3.4"
pytest-watcher = "^0.4.3"
django-livereload-server = "^0.5.1"
daphne = "^4.1.2"
django-channels = "^0.7.0"
openai = "^1.57.0"
pydantic = "^2.10.3"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
uuid = "^1.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
