[tool.poetry]
name = "shoppyshops-shop"
version = "0.1.0"
description = "AI-assisted e-commerce platform integration"
authors = ["Daryl Antony <daryl@shoppyshops.shop>"]
readme = "README.md"
packages = [
    {include = "shoppyshops"},
    {include = "shopify"},
    {include = "ebay"},
    {include = "meta"},
    {include = "shoppyshop"}
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.4"
django-htmx = "^1.21.0"
django-livereload-server = "^0.5.1"
daphne = "^4.1.2"
django-channels = "^0.7.0"
openai = "^1.57.0"
pydantic = "^2.10.3"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-watcher = "^0.4.3"
pytest-asyncio = "^0.23.5"
pytest-django = "^4.8.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
django_settings_module = "shoppyshops.settings"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:warnings"
markers = [
    "mock: mark test to run with mock data",
    "real: mark test to run with real APIs",
    "use_real_apis: mark test to run with real APIs"
]
